--- a/try2.html
+++ b/try2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    sec
+    sec samp
 <br>
 <a href="index.html"><img src="pic/jujutsu-kaisen-movie.webp" alt="">
 </body>
